# template-python-project-poetry

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  package-lock.json  package.json  poetry.toml  pyproject.toml  release.config.js  release.config.mjs  rename-template.sh  renovate.json  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: check.yml  deploy.yml  dockerify.yml  init.yml
my_project/: __init__.py  __main__.py
test/: __init__.py
tests/: __init__.py  test_my_class.py
