[tool.poetry]
name = "template-python-project-poetry"
packages = [
    { include = "my_project" },
]
version = "2.1.7"
description = "A template for Python projects, using Poetry"
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9.0 < 4.0.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
mypy = "^1.10.1"
poethepoet = "^0.27.0"
poetry = "^1.8.3"
pytest = "^8.2.2"

[tool.poe.tasks]
test = "python -m unittest discover -v -s tests -p '*.py'"
coverage = "coverage run -m unittest discover -v -s tests -p '*.py'"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
mypy = "mypy my_project tests"
compile = "python -m compileall my_project tests"

[tool.poetry.scripts]
my_project = "my_project:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.mypy]
ignore_missing_imports = true
